Agregando HTML a la sección del header

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -6,6 +6,18 @@
     <title>Inmobiliaria</title>
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h1>Empresa Inmobiliaria</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, nihil inventore repellat commodi dicta earum?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, animi!</p>
+            <a href="">Read more</a>
+
+            <figure>
+                <img src="./public/images/header.jpg" alt="Tres personas conversando en un rascacielo">
+                <figcaption>Un lugar como ningún otro</figcaption>
+            </figure>
+        </div>
+    </section>
 </body>
 </html>
