--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -7,16 +7,25 @@
 </head>
 <body>
     <section>
-        <div>
-            <h1>Empresa Inmobiliaria</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, nihil inventore repellat commodi dicta earum?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, animi!</p>
-            <a href="">Read more</a>
+        <div class="grid">
+            <div class="container">
+                <div class="grid-main-area">
+                    <div class="main-text">
+                        <h1>Empresa Inmobiliaria</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, nihil inventore repellat commodi dicta earum?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, animi!</p>
+                        <a href="">Read more</a>
+                    </div>
+        
+                    <div class="main-image">
+                        <figure>
+                            <img src="./public/images/image1.jpg" alt="Tres personas conversando en un rascacielo">
+                            <figcaption>Un lugar como ningún otro</figcaption>
+                        </figure>
+                    </div>
+            </div>
+        </div>
 
-            <figure>
-                <img src="./public/images/header.jpg" alt="Tres personas conversando en un rascacielo">
-                <figcaption>Un lugar como ningún otro</figcaption>
-            </figure>
         </div>
     </section>
 </body>
