--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -10,14 +10,14 @@
         <div class="grid">
             <div class="container">
                 <div class="grid-main-area">
-                    <div class="main-text">
+                    <div class="text">
                         <h1>Empresa Inmobiliaria</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, nihil inventore repellat commodi dicta earum?</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, animi!</p>
-                        <a href="">Read more</a>
+                        <a class="btn" href="">Read more</a>
                     </div>
         
-                    <div class="main-image">
+                    <div class="image">
                         <figure>
                             <img src="./public/images/image1.jpg" alt="Tres personas conversando en un rascacielo">
                             <figcaption>Un lugar como ningún otro</figcaption>
