--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -28,5 +28,13 @@
 
         </div>
     </section>
+
+    <section>
+        <div class="cover parallax">
+
+        </div>
+    </section>
+
+    <section style="min-height: 100vh;"></section>
 </body>
 </html>
