Agregando estilos a sección parallax

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -31,7 +31,12 @@
 
     <section>
         <div class="cover parallax">
-
+            <p>
+                Lorem ipsum dolor sit amet consectetur elit!
+                <span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere tempora illum doloremque!
+                </span>
+            </p>
         </div>
     </section>
 
