Agregando sección de nosotros usnadando mixins

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -40,6 +40,18 @@
         </div>
     </section>
 
-    <section style="min-height: 100vh;"></section>
+    <section>
+        <div class="grid full-height mission">
+            <div class="container">
+                <h2>Our mission</h2>
+                <figure>
+                    <img src="./public/images/image2.jpg" alt="Imagen de dos personas en un sillón mirando una laptop" height="400">
+                    <figcaption>Lorem ipsum dolor sit amet</figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit pariatur ipsam, ut nam quidem tenetur quo ex laboriosam error voluptatem vitae, repellendus ullam corrupti ad id, eligendi atque. Quas, perferendis.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus enim, consectetur quisquam consequatur deleniti officia!</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
