--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -53,5 +53,17 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="grid social">
+            <div class="container">
+                <p class="title">Contactos</p>
+                <a href="" class="btn">Mail</a>
+                <a href="" class="btn">Twitter</a>
+                <a href="" class="btn">Facebook</a>
+                <a href="" class="btn">Instagram</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
