--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -41,6 +41,24 @@
     </section>
 
     <section>
+        <div class="grid-main-area slider">
+            <div class="text">
+                <header>
+                    <p id="slider-subtitle" class="separator">Lorem</p>
+                    <h2 id="slider-title">Lorem Impsum</h2>
+                    <p class="slider-text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum itaque ex impedit similique, illo voluptas.
+                    </p>
+                </header>
+            </div>
+
+            <div class="image">
+                <img id="slider-image" src="../public/images/image4.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section>
         <div class="grid full-height mission">
             <div class="container">
                 <h2>Our mission</h2>
