Agregando animación al slider

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -44,16 +44,18 @@
         <div class="grid-main-area slider">
             <div class="text">
                 <header>
-                    <p id="slider-subtitle" class="separator">Lorem</p>
-                    <h2 id="slider-title">Lorem Impsum</h2>
-                    <p class="slider-text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum itaque ex impedit similique, illo voluptas.
-                    </p>
+                    <div id="slider-text-content">
+                        <p id="slider-subtitle" class="separator">Lorem</p>
+                        <h2 id="slider-title">Lorem Impsum</h2>
+                        <p id="slider-text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum itaque ex impedit similique, illo voluptas.
+                        </p>
+                    </div>
                 </header>
             </div>
 
             <div class="image">
-                <img id="slider-image" src="../public/images/image4.jpg" alt="">
+                <img id="slider-image" src="./public/images/image4.jpg" alt="">
             </div>
         </div>
     </section>
