Agregar elementos y funcionalidad de prev y next al slider

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -43,6 +43,12 @@
     <section>
         <div class="grid-main-area slider">
             <div class="text">
+                <div class="controls">
+                    <img src="./public/svg/next.svg" alt="Flecha a la izquierda" class="left-arrow">
+                    <img src="./public/svg/next.svg" alt="Flecha a la derecha" class="right-arrow">
+                    <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+                </div>
+                
                 <header>
                     <div id="slider-text-content">
                         <p id="slider-subtitle" class="separator">Lorem</p>
