Agregando preolader para las imagenes

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -48,7 +48,7 @@
                     <img src="./public/svg/next.svg" alt="Flecha a la derecha" class="right-arrow">
                     <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
                 </div>
-                
+
                 <header>
                     <div id="slider-text-content">
                         <p id="slider-subtitle" class="separator">Lorem</p>
@@ -78,6 +78,10 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus enim, consectetur quisquam consequatur deleniti officia!</p>
             </div>
         </div>
+    </section>
+
+    <section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.857217037325!2d-77.03284438561683!3d-12.121920346602542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c819733707fb%3A0x1e5a74acd2420786!2sParque%20Kennedy%2C%20Miraflores!5e0!3m2!1ses-419!2spe!4v1591842576678!5m2!1ses-419!2spe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
 
     <section>
