Insertar mapa con javascript con API de Google

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -81,7 +81,7 @@
     </section>
 
     <section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.857217037325!2d-77.03284438561683!3d-12.121920346602542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c819733707fb%3A0x1e5a74acd2420786!2sParque%20Kennedy%2C%20Miraflores!5e0!3m2!1ses-419!2spe!4v1591842576678!5m2!1ses-419!2spe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div id="map"></div>
     </section>
 
     <section>
@@ -95,5 +95,7 @@
             </div>
         </div>
     </section>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-Uo56wAnYolgOqZ-61udEhv14lJkJYlQ"></script>
 </body>
 </html>
