Instalando services worker

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -74,7 +74,7 @@
     </section>
 
     <!--Sliders-->
-    <section id="#products">
+    <section id="products">
         <div class="grid-main-area slider">
             <div class="text">
                 <div class="controls">
