terminando de configurar webpack para produccion

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="menu">
-        <img src="./public/svg/menu.svg" alt="Imagen hamburguesa para abrir menú">
+        <img src="../public/svg/menu.svg" alt="Imagen hamburguesa para abrir menú">
     </div>
     <div class="menu-screen">
         <a href="#" class="close">
@@ -51,7 +51,7 @@
         
                     <div class="image">
                         <figure>
-                            <img src="./public/images/image1.jpg" alt="Tres personas conversando en un rascacielo">
+                            <img src="../public/images/image1.jpg" alt="Tres personas conversando en un rascacielo">
                             <figcaption>Un lugar como ningún otro</figcaption>
                         </figure>
                     </div>
@@ -78,8 +78,8 @@
         <div class="grid-main-area slider">
             <div class="text">
                 <div class="controls">
-                    <img src="./public/svg/next.svg" alt="Flecha a la izquierda" class="left-arrow">
-                    <img src="./public/svg/next.svg" alt="Flecha a la derecha" class="right-arrow">
+                    <img src="../public/svg/next.svg" alt="Flecha a la izquierda" class="left-arrow">
+                    <img src="../public/svg/next.svg" alt="Flecha a la derecha" class="right-arrow">
                     <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
                 </div>
 
@@ -95,7 +95,7 @@
             </div>
 
             <div class="image">
-                <img id="slider-image" src="./public/images/image4.jpg" alt="">
+                <img id="slider-image" src="../public/images/image4.jpg" alt="">
             </div>
         </div>
     </section>
@@ -106,7 +106,7 @@
             <div class="container">
                 <h2>Our mission</h2>
                 <figure>
-                    <img src="./public/images/image2.jpg" alt="Imagen de dos personas en un sillón mirando una laptop" height="400">
+                    <img src="../public/images/image2.jpg" alt="Imagen de dos personas en un sillón mirando una laptop" height="400">
                     <figcaption>Lorem ipsum dolor sit amet</figcaption>
                 </figure>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit pariatur ipsam, ut nam quidem tenetur quo ex laboriosam error voluptatem vitae, repellendus ullam corrupti ad id, eligendi atque. Quas, perferendis.</p>
